# fishystuff

./: .envrc  .gitignore  .gitmodules  AGENTS.md  CNAME  Cargo.toml  Justfile  LICENSE  README.md  build.zig  build.zig.zon  devenv.nix  devenv.yaml  durationFormatter.js  fira_code.css  flake.nix  index.html  pyproject.toml  secretspec.toml  style.css
.cargo/: config.toml
api/fishystuff_server/: Cargo.toml
api/fishystuff_server/assets/: calculator_catalogs.json
api/fishystuff_server/src/: app.rs  config.rs  error.rs  main.rs  state.rs
api/fishystuff_server/src/routes/: calculator.rs  effort.rs  events.rs  fish.rs  layers.rs  meta.rs  mod.rs  public_assets.rs  region_groups.rs  trade.rs  zone_profile_v2.rs  zone_stats.rs  zones.rs
api/fishystuff_server/src/store/: dolt_mysql.rs  mod.rs
api/fishystuff_server/src/store/dolt_mysql/: calculator.rs  calculator_defaults.rs  calculator_effects.rs  calculator_items.rs  calculator_loot.rs  calculator_pets.rs  calculator_progression.rs  calculator_sources.rs  calculator_trade_npcs.rs  catalog.rs  fish_best_spots.rs  item_metadata.rs  layers.rs  stats.rs  util.rs
api/fishystuff_server/src/store/dolt_mysql/zone_profile_v2/: assignment.rs  community_support.rs  legacy_support.rs  mod.rs  response.rs  tests.rs
api/fishystuff_server/src/store/queries/: mod.rs
bot/: .envrc  Cargo.toml  README.md  build.rs  devenv.nix  fly.toml
bot/src/: main.rs
bot/src/help/: mod.rs
bot/src/moderation/: burst_guard.rs  debug_perms.rs  index.rs  mod.rs  trap.rs  types.rs
bot/src/moderation/actions/: mod.rs  notify.rs  purge.rs  timeout.rs
bot/src/moderation/handler/: burst_guard.rs  mod.rs  trap.rs
bot/src/moderation/purge/: mod.rs  purge.rs  recent_index.rs
bot/src/paginate/: mod.rs
bot/src/poke/: mod.rs
bot/src/talk/: mod.rs
bot/src/utils/fuzzy/: mod.rs
bot/src/waypoints/: list.rs  mod.rs
bot/src/zones/: fish_names.rs  list.rs  mod.rs  zone_names.rs
lib/fishystuff_analytics/: Cargo.toml
lib/fishystuff_analytics/src/: lib.rs
lib/fishystuff_client/: Cargo.toml
lib/fishystuff_client/src/: lib.rs
map/fishystuff_ui_bevy/: Cargo.toml
map/fishystuff_ui_bevy/benches/: perf_hotpaths.rs
map/fishystuff_ui_bevy/src/: app.rs  config.rs  lib.rs  main.rs  prelude.rs  public_assets.rs  runtime_io.rs
map/fishystuff_ui_bevy/src/bridge/: mod.rs  theme.rs
map/fishystuff_ui_bevy/src/bridge/contract/: events.rs  input.rs  mod.rs  normalize.rs  search.rs  snapshot.rs
map/fishystuff_ui_bevy/src/bridge/host/: mod.rs
map/fishystuff_ui_bevy/src/bridge/host/emission/: diagnostic.rs  mod.rs  state.rs  view.rs
map/fishystuff_ui_bevy/src/bridge/host/input/: mod.rs  queue.rs
map/fishystuff_ui_bevy/src/bridge/host/persistence/: layers.rs  mod.rs  patches.rs  view.rs
map/fishystuff_ui_bevy/src/bridge/host/snapshot/: mod.rs  view.rs
map/fishystuff_ui_bevy/src/map/: exact_lookup.rs  field_metadata.rs  field_semantics.rs  field_view.rs  hover_query.rs  interaction_summary.rs  layer_query.rs  mod.rs  render.rs  search_filters.rs  selection_query.rs  streaming.rs
map/fishystuff_ui_bevy/src/map/camera/: map2d.rs  mod.rs  mode.rs  terrain3d.rs
map/fishystuff_ui_bevy/src/map/events/: cluster.rs  index.rs  mod.rs  snapshot.rs  zone_footprint.rs
map/fishystuff_ui_bevy/src/map/layers/: catalog.rs  mod.rs  registry.rs  runtime.rs
map/fishystuff_ui_bevy/src/map/raster/: manifest.rs  mod.rs  runtime.rs  static_image.rs
map/fishystuff_ui_bevy/src/map/raster/cache/: mod.rs
map/fishystuff_ui_bevy/src/map/raster/policy/: bounds.rs  mod.rs  requests.rs  residency.rs
map/fishystuff_ui_bevy/src/map/spaces/: affine.rs  layer_transform.rs  mod.rs  world.rs
map/fishystuff_ui_bevy/src/map/terrain/: chunks.rs  drape.rs  height_tiles.rs  materials.rs  mesh.rs  mod.rs  mode.rs  runtime.rs
map/fishystuff_ui_bevy/src/map/terrain/runtime/: chunks.rs  diagnostics.rs  manifest.rs
map/fishystuff_ui_bevy/src/map/ui_layers/: diagnostics.rs  mod.rs
map/fishystuff_ui_bevy/src/map/ui_layers/controls/: debug.rs  layers.rs  mod.rs  view.rs
map/fishystuff_ui_bevy/src/map/ui_layers/panel/: debug_row.rs  layer_rows.rs  mod.rs  view_rows.rs
map/fishystuff_ui_bevy/src/map/vector/: build.rs  cache.rs  geojson.rs  mod.rs  render.rs  style.rs  triangulate.rs
map/fishystuff_ui_bevy/src/plugins/: bookmarks.rs  camera.rs  diagnostics.rs  field_layers.rs  field_tile_layers.rs  fishing_hotspots.rs  hotspots.rs  hover_targets.rs  input.rs  local_layers.rs  mask.rs  mod.rs  raster.rs  render_domain.rs  selection_point.rs  svg_icons.rs  vector_layers.rs  waypoint_layers.rs
map/fishystuff_ui_bevy/src/plugins/api/: fish.rs  mod.rs  remote_images.rs
map/fishystuff_ui_bevy/src/plugins/api/requests/: apply.rs  ensure.rs  mod.rs  poll.rs  spawn.rs  util.rs
map/fishystuff_ui_bevy/src/plugins/api/state/: bootstrap.rs  catalog.rs  community.rs  filters.rs  interaction.rs  mod.rs  pending.rs
map/fishystuff_ui_bevy/src/plugins/points/: hit.rs  loading.rs  mod.rs  render.rs
map/fishystuff_ui_bevy/src/plugins/points/query/: evidence.rs  mod.rs  refresh.rs  state.rs
map/fishystuff_ui_bevy/src/plugins/ui/: mod.rs  panel.rs  scroll.rs  search.rs  toggles.rs
map/fishystuff_ui_bevy/src/plugins/ui/patches/: dropdown.rs  mod.rs  selection.rs  slider.rs
map/fishystuff_ui_bevy/src/plugins/ui/setup/: mod.rs  panel_shell.rs  patch_shell.rs  search_shell.rs  styles.rs
map/fishystuff_ui_bevy/src/profiling/: bench_support.rs  browser.rs  fixtures.rs  harness.rs  mod.rs  scenario.rs
map/fishystuff_ui_bevy/tests/fixtures/: tiny_vector.geojson
map/fishystuff_ui_bevy/tests/fixtures/profiling/: events_snapshot.json  fish_catalog.json  layers.json
tools/fishystuff_dolt_import/: Cargo.toml
tools/fishystuff_dolt_import/src/: effect_table_headers.rs  item_table_headers.rs  main.rs
tools/fishystuff_ingest/: Cargo.toml
tools/fishystuff_ingest/src/: field_layers.rs  fishing_hotspots.rs  hotspots.rs  main.rs  mysql_store.rs  ranking.rs  region_groups.rs  region_layers.rs  trade_npcs.rs
tools/fishystuff_tilegen/: Cargo.toml
tools/fishystuff_tilegen/src/: main.rs
(+987 files in other folders)
