[package]
name = "bot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
rand = "0.9.1"
fuzzy-matcher = "0.3.7"
futures = "0.3.31"
urlencoding = "2.1.3"
strum = { version = "0.27.1", features = ["derive"] }
tracing = "0.1.41"
chrono = "0.4.41"
dashmap = "6.1.0"
async-trait = "0.1.88"
