[package]
name = "fishystuff_server"
version = "0.1.0"
edition = "2021"

[features]
default = []
docs = []

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.6", features = ["json"] }
chrono = { workspace = true }
datastar = "0.3.1"
fishystuff_api = { path = "../../lib/fishystuff_api" }
fishystuff_config = { path = "../../lib/fishystuff_config" }
fishystuff_core = { path = "../../lib/fishystuff_core" }
fuzzy-matcher = "0.3.7"
mysql = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4", features = ["compression-br", "compression-gzip", "cors", "trace"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
hyper = "0.14"
tower = "0.4"
