[package]
name = "fishystuff_client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
fishystuff_api = { path = "../fishystuff_api" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.5", features = ["http"] }
web-sys = { version = "0.3", features = ["Location", "Window"] }
