[package]
name = "fishystuff_ui_bevy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-channel = "2"
base64 = "0.22"
bevy_asset = { version = "0.18", default-features = false }
bevy_flair = "0.7"
bevy_resvg = "2.3.3"
bevy_image = { version = "0.18", default-features = false }
bevy_render = { version = "0.18", default-features = false }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
encase = "0.12"
earcutr = "0.4"
fishystuff_api = { path = "../../lib/fishystuff_api" }
fishystuff_client = { path = "../../lib/fishystuff_client" }
fishystuff_core = { path = "../../lib/fishystuff_core" }
futures-executor = "0.3"
image = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
bevy_ecs = { version = "0.18", default-features = false }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_image",
  "bevy_log",
  "bevy_picking",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_sprite_render",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "debug",
  "multi_threaded",
  "png",
  "ui_picking",
  "webp",
  "x11",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_image",
  "bevy_log",
  "bevy_picking",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_sprite_render",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "http",
  "https",
  "png",
  "ui_picking",
  "webgl2",
  "webp",
] }
gloo-net = { version = "0.5", features = ["http"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Performance", "Window"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }

[[bench]]
name = "perf_hotpaths"
harness = false
