[package]
name = "fishystuff_dolt_import"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
calamine = "0.24"
clap.workspace = true
csv.workspace = true
fishystuff_api = { path = "../../lib/fishystuff_api" }
fishystuff_core = { path = "../../lib/fishystuff_core" }
serde_json = "1"
sha2 = "0.10"
